WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264862
Break RemoteFrame/RemoteFrameView reference cycle
https://bugs.webkit.org/show_bug.cgi?id=264862
Summary
Break RemoteFrame/RemoteFrameView reference cycle
Alex Christensen
Reported
2023-11-14 22:14:55 PST
rdar://116200737
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2023-11-14 22:21:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20523
EWS
Comment 2
2023-11-15 11:03:21 PST
Committed
270776@main
(8f58d68e957e): <
https://commits.webkit.org/270776@main
> Reviewed commits have been landed. Closing PR #20523 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug